# gym-guide-chatbot

./: .gitignore  chat_ui.py  pyproject.toml
src/gym_guide_chatbot/: chatbot.py  database.py  prompt.py  test.ipynb  utils.py
